--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ================= GLOBAL =================*/
 *{
     margin: 0;
     padding: 0;
@@ -11,6 +12,8 @@ a {
     width: 1200px;
     margin: 0 auto;
 }
+
+/* ================= HEADER =================*/
 .header{
     color: #666666;
     display: flex;
@@ -50,6 +53,7 @@ padding: 0 4px;
     align-items: center;
     justify-content: space-between;
 }
+/* ================= HOME (index.html) =================*/
 .section-home{
     min-height:calc(100vh - 55px);
     display: flex;
@@ -68,4 +72,25 @@ padding: 0 4px;
 }
 .profile-img{
     border-radius: 50%;
+}
+/* ================= ABOUT ME (about.html) =================*/
+.section-about{
+    font-family: 'Poppins', sans-serif;
+    min-height:calc(100vh - 55px);
+    width: 710px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.section-about-work{
+    
+}
+.section-about h1{
+    font-size: 36px;
+    color: #42446e;
+    margin: 32px 0;
+}
+.section-about p{
+    font-size: 18px;
+    color: #666666;
 }
